# vibe-repo

./: .env.docker  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DOCKER_SETUP_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  FIXES_COMPLETION_REPORT.md  FIXES_SUMMARY.md  HIGH_PRIORITY_FIXES.md  INTEGRATION_TEST_COMPLETION_SUMMARY.md  INTEGRATION_TEST_UPDATE_SUMMARY.md  MIGRATION.md  README.md  REMAINING_FIXES_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  UPGRADE_v0.4.0.md  WEBHOOK_TEST_SUMMARY.md  WEBSOCKET_AUTH_IMPLEMENTATION.md  docker-compose.yml  test_webhook.sh  test_webhook_e2e.sh  test_webhook_pr10.sh  test_webhook_pr8.sh  test_websocket.sh  test_websocket_realtime.sh  test_ws_realtime.py
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md
backend/.cargo/: config.toml
backend/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  state.rs
backend/src/api/: mod.rs
backend/src/config/: mcp.rs
backend/src/db/: database.rs  mod.rs
backend/src/entities/: agent.rs  container.rs  init_script.rs  mod.rs  prelude.rs  repo_provider.rs  repository.rs  task.rs  task_execution.rs  task_log.rs  webhook_config.rs  workspace.rs
backend/src/git_provider/: error.rs  factory.rs  mod.rs  models.rs  traits.rs
backend/tests/: branch_validation_property_tests.rs  e2e.rs  enum_dispatch_git_client_property_tests.rs  git_provider.rs  git_provider_error_property_tests.rs  git_provider_factory_property_tests.rs  git_provider_webhook_models_tests.rs  git_provider_webhook_trait_tests.rs  gitea_model_conversion_property_tests.rs  gitea_null_response_tests.rs  gitea_webhook_tests.rs  health.rs  health_integration_tests.rs  health_property_tests.rs  image_management_api_tests.rs  init_scripts.rs  logging_integration_tests.rs  migration_validation_tests.rs  openapi_integration_tests.rs  provider_integration_tests.rs  provider_lifecycle_integration_tests.rs  provider_property_tests.rs  provider_unique_constraint_tests.rs  providers.rs  repositories.rs  repository_initialization_integration_tests.rs  repository_initialization_property_tests.rs  repository_integration_tests.rs  repository_sync_integration_tests.rs  repository_sync_property_tests.rs  repository_webhook_status_tests.rs  server_startup_tests.rs  tasks.rs  webhook_api_tests.rs  webhook_cleanup_tests.rs  webhook_entity_tests.rs  webhook_event_routing_tests.rs  webhook_logging_tests.rs  webhook_migration_tests.rs  webhook_payload_tests.rs  (+8 more)
(+298 files in other folders)
