[package]
name = "vibe-repo"
version = "0.1.1"
edition = "2021"

[features]
default = []
test-utils = ["dep:tempfile"]

[[bin]]
name = "vibe-repo"
path = "src/main.rs"

[lib]
name = "vibe_repo"
path = "src/lib.rs"

[dependencies]
# Web framework and async runtime
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database - 保留 SQLx 用于现有代码，逐步迁移到 SeaORM
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "migrate"] }

# Database ORM - 新代码使用 SeaORM
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }

# Docker integration
bollard = "0.16"

# Futures utilities
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# HTTP client for Git provider APIs
reqwest = { version = "0.11", features = ["json"] }

# Async trait support
async-trait = "0.1"

# Static dispatch for enum-based polymorphism (supports async methods)
static-dispatch = "0.2"

# HMAC for webhook signature validation
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# URL encoding
urlencoding = "2.1"

# URL parsing
url = "2.5"

# Property-based testing
proptest = "1.4"

# Temporary file handling (optional, for test-utils feature)
tempfile = { version = "3.8", optional = true }

# OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
tempfile = "3.8"
serde_yaml = "0.9"
vibe-repo = { path = ".", features = ["test-utils"] }
http-body-util = "0.1"
wiremock = "0.6"